@@ -41,7 +41,7 @@ shell wrapper).
 Highlight lines which, whilst they do not contain bashisms, may be
 useful in determining whether a particular issue is a false positive
 which may be ignored.
-For example, the use of "$BASH_ENV" may be preceeded by checking
+For example, the use of "$BASH_ENV" may be preceded by checking
 whether "$BASH" is set.
 .TP
 .BR \-\-version ", " \-v
